--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.0",
+    "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "redux-axios-middleware": "^4.0.1",
     "typescript": "^3.5.3"
   },
   "scripts": {
